fix/gap-alignment (#350)

--- a/src/components/pages/personal-teacher-page/personal-teacher-tabs/PersonalTeacherTabs.module.scss
+++ b/src/components/pages/personal-teacher-page/personal-teacher-tabs/PersonalTeacherTabs.module.scss
@@ -116,6 +116,7 @@ box-sizing: border-box;
     //width: 100%;
     display: flex;
     flex-direction: row;
+    gap: 8px;
     overflow: scroll;
     scrollbar-width: none;
     box-sizing: border-box;
